billing, catalog service implemented, changed catalog to mongo, design docs updated